# airflower

./: .gitignore  README.md  requirements.txt
nexus/: client.py  pyproject.toml
nexus/src/nexus/: grpc_client.py
nexus/src/nexus/protos/: strategia_pb2.py  strategia_pb2_grpc.py
nexus/src/nexus/scripts/: generate.py
protobufs/: pyproject.toml
protobufs/airflower_protobufs/: vlr_pb2.py  vlr_pb2.pyi  vlr_pb2_grpc.py
protobufs/scripts/: generate.py
protos/: strategia.proto  vlr.proto
strategia/: pyproject.toml  server.py
strategia/src/strategia/: grpc_server.py
strategia/src/strategia/protos/: strategia_pb2.py  strategia_pb2_grpc.py
strategia/src/strategia/scripts/: generate.py
